welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:4: error: not a legal formal parameter
	if (a<=40 && a=>30){n=n+1} 
                  ^in3050:5: error: not a legal formal parameter
	if (b<=40 && b=>30){n=n+1}
                  ^in3050:6: error: not a legal formal parameter
	if (a<=50 && a=>40){m=m+1}
                  ^in3050:7: error: not a legal formal parameter
	if (b<=50 && b=>40){m=m+1}
                  ^